collapse fix mobile

--- a/static/source/stylesheets/components/_tabbed.scss
+++ b/static/source/stylesheets/components/_tabbed.scss
@@ -11,6 +11,16 @@
 
 }
 
+.panel-group.visible-xs{
+	margin-top: 40px;
+	text-align: center;
+	.panel-body{
+		h3{
+			display: none;
+		}
+	}
+}
+
 .tabbed{
 
 	h3{
