--- a/static/source/stylesheets/components/_zoomslider.scss
+++ b/static/source/stylesheets/components/_zoomslider.scss
@@ -25,7 +25,7 @@ $color-bullet-active: $brand-primary;
 			.zs-slide {
 				background: transparent none no-repeat 50% 50%;
 		        background-size: cover;
-		        background-attachment: fixed;
+		      //  background-attachment: fixed;
 		        position: absolute;
 		        visibility: hidden;
 		        -webkit-transform: translate3d(0px, -80px, 0);
@@ -45,6 +45,7 @@ $color-bullet-active: $brand-primary;
 			left: 0;
 			width: 100%;
 			text-align: center;
+			display: none;
 			.zs-bullet {
 				display: inline-block;
 				cursor: pointer;
