--- a/static/source/stylesheets/sections/_navbar.scss
+++ b/static/source/stylesheets/sections/_navbar.scss
@@ -32,9 +32,9 @@
 				padding-top: 30px;
 				text-align: center;
 				text-transform: uppercase;
+				text-align: center;
 				@media (min-width: $screen-sm-min) { 
 					padding-top: 0px;
-					text-align: center;
 					float: none;
 					margin-left: -20px;
 					>li{
@@ -106,6 +106,13 @@
 	padding: 0;
 	li{
 		display: block;
+		text-align: center;
+		font-size: 12px;
+		margin-left: -15px;
+		@media (min-width: $screen-sm-min) { 
+			margin-left: 0;
+		}
+
 	}
 
 }
